--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu type="overlay">
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+          <ion-img src="/assets/logoPrincipal.png" id="logo"></ion-img>
         </ion-toolbar>
       </ion-header>
       <ion-content>
