Finalização das custumizações da página Login/Cadastro e instalação das dependências do Firebase

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,8 +8,39 @@
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
-      <img src="/assets/banner.png" alt="" />
-    </ion-card>
-    
+  <!-- Produto promocional -->
+  <ion-card class="welcome-card">
+    <img src="/assets/banner.png"/>
+  </ion-card>
+
+  <!-- Demais produtos -->
+
+  <ion-card class="welcome-card2">
+    <img src="/assets/banner.png"/>
+
+    <div>Produto</div>
+    <div>R$ 89,90</div>
+  </ion-card>
+
+  <ion-card class="welcome-card2">
+    <img src="/assets/banner.png"/>
+
+    <div>Produto</div>
+    <div>R$ 89,90</div>
+  </ion-card>
+  
+  <ion-card class="welcome-card2">
+    <img src="/assets/banner.png"/>
+
+    <div>Produto</div>
+    <div>R$ 89,90</div>
+  </ion-card>
+
+  <ion-card class="welcome-card2">
+    <img src="/assets/banner.png"/>
+
+    <div>Produto</div>
+    <div>R$ 89,90</div>
+  </ion-card>
+
 </ion-content>
