--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,9 +1,64 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="swiper-no-swiping">
+  <div id="geral">
+    <div class="container top" [hidden]="keyboard.isVisible">
+      <img src="/assets/logoPrincipal.png">
+    </div>
 
-<ion-content>
+    <ion-slides>
+      <ion-slide>
+        <div class="slide-inner ion-padding">
+          <!-- <span>Login</span> -->
 
+          <ion-item class="ion-margin-top" lines="none">
+            <ion-input type="email" placeholder="E-mail"></ion-input>
+          </ion-item>
+
+          <ion-item class="ion-margin-top" lines="none">
+            <ion-input type="password" placeholder="Senha"></ion-input>
+          </ion-item>
+
+          <ion-button class="ion-margin-top" (click)="login()" color="light" expand="block">Entrar</ion-button>
+
+          <div class="notPassword">
+            <span>Esqueci a senha</span>
+          </div>
+        </div>
+      </ion-slide>
+
+      <ion-slide>
+        <div class="slide-inner ion-padding">
+          <!-- <span>Cadastro</span> -->
+
+          <ion-item class="ion-margin-top" lines="none">
+            <ion-input type="text" placeholder="CNPJ"></ion-input>
+          </ion-item>
+
+          <!-- <ion-item class="ion-margin-top" lines="none">
+                <ion-input type="text" placeholder="Razão Social"></ion-input>
+              </ion-item> -->
+
+          <ion-item class="ion-margin-top" lines="none">
+            <ion-input type="email" placeholder="E-mail"></ion-input>
+          </ion-item>
+
+          <ion-item class="ion-margin-top" lines="none">
+            <ion-input type="password" placeholder="Senha"></ion-input>
+          </ion-item>
+
+          <ion-button class="ion-margin-top" (click)="register()" color="light" expand="block">Cadastrar</ion-button>
+        </div>
+      </ion-slide>
+    </ion-slides>
+
+    <div class="container bottom" [hidden]="keyboard.isVisible">
+      <ion-segment>
+        <ion-button (click)="mouseEvent($event)">
+          <ion-label>Login</ion-label>
+        </ion-button>
+        <ion-button (click)="mouseEvent($event)">
+          <ion-label>Cadastro</ion-label>
+        </ion-button>
+      </ion-segment>
+    </div>
+  </div>
 </ion-content>
