--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -10,11 +10,11 @@
           <!-- <span>Login</span> -->
 
           <ion-item class="ion-margin-top" lines="none">
-            <ion-input type="email" placeholder="E-mail"></ion-input>
+            <ion-input type="email" placeholder="E-mail" [(ngModel)]="userLogin.email"></ion-input>
           </ion-item>
 
           <ion-item class="ion-margin-top" lines="none">
-            <ion-input type="password" placeholder="Senha"></ion-input>
+            <ion-input type="password" placeholder="Senha" [(ngModel)]="userLogin.password"></ion-input>
           </ion-item>
 
           <ion-button class="ion-margin-top" (click)="login()" color="light" expand="block">Entrar</ion-button>
@@ -38,11 +38,11 @@
               </ion-item> -->
 
           <ion-item class="ion-margin-top" lines="none">
-            <ion-input type="email" placeholder="E-mail"></ion-input>
+            <ion-input type="email" placeholder="E-mail" [(ngModel)]="userRegister.email"></ion-input>
           </ion-item>
 
           <ion-item class="ion-margin-top" lines="none">
-            <ion-input type="password" placeholder="Senha"></ion-input>
+            <ion-input type="password" placeholder="Senha" [(ngModel)]="userRegister.password"></ion-input>
           </ion-item>
 
           <ion-button class="ion-margin-top" (click)="register()" color="light" expand="block">Cadastrar</ion-button>
