Várias configurações como, criação da página de detalhes, início da modelagem da entidade produtos e por aí vai

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,38 +9,40 @@
 
 <ion-content>
   <!-- Produto promocional -->
-  <ion-card class="welcome-card">
-    <img src="/assets/banner.png"/>
+  <ion-card class="welcome-card" routerLink="/details">
+    <img src="/assets/banner.png" />
   </ion-card>
 
   <!-- Demais produtos -->
 
-  <ion-card class="welcome-card2">
-    <img src="/assets/banner.png"/>
+  <div class="master">
+    <ion-card class="welcome-card2" routerLink="/details">
+      <img src="/assets/banner.png" />
 
-    <div>Produto</div>
-    <div>R$ 89,90</div>
-  </ion-card>
+      <div>Produto</div>
+      <div>R$ 89,90</div>
+    </ion-card>
 
-  <ion-card class="welcome-card2">
-    <img src="/assets/banner.png"/>
+    <ion-card class="welcome-card2" routerLink="/details">
+      <img src="/assets/banner.png" />
 
-    <div>Produto</div>
-    <div>R$ 89,90</div>
-  </ion-card>
-  
-  <ion-card class="welcome-card2">
-    <img src="/assets/banner.png"/>
+      <div>Produto</div>
+      <div>R$ 89,90</div>
+    </ion-card>
 
-    <div>Produto</div>
-    <div>R$ 89,90</div>
-  </ion-card>
+    <ion-card class="welcome-card2" routerLink="/details">
+      <img src="/assets/banner.png" />
 
-  <ion-card class="welcome-card2">
-    <img src="/assets/banner.png"/>
+      <div>Produto</div>
+      <div>R$ 89,90</div>
+    </ion-card>
 
-    <div>Produto</div>
-    <div>R$ 89,90</div>
-  </ion-card>
+    <ion-card class="welcome-card2" routerLink="/details">
+      <img src="/assets/banner.png" />
+
+      <div>Produto</div>
+      <div>R$ 89,90</div>
+    </ion-card>
+  </div>
 
 </ion-content>
