--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
+        <ion-item>Sair</ion-item>
       </ion-content>
     </ion-menu>
     <ion-router-outlet main></ion-router-outlet>
