--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,3 +1,9 @@
+ion-searchbar {
+  --background: rgba(46, 142, 187, 0.5);
+  --color: #fff;
+  --icon-color: #91c2e2;
+}
+
 .welcome-card img {
   max-height: 100vh;
   overflow: hidden;
