Ciração e configuração inicial da págnia de recuperação de senha

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -20,7 +20,7 @@
           <ion-button class="ion-margin-top" (click)="login()" color="light" expand="block">Entrar</ion-button>
 
           <div class="notPassword">
-            <span>Esqueci a senha</span>
+            <span routerLink="../password">Esqueci a senha</span>
           </div>
         </div>
       </ion-slide>
