Configuração ddo back-end da página de redefinição de senha

--- a/src/app/pages/password/password.page.html
+++ b/src/app/pages/password/password.page.html
@@ -14,7 +14,7 @@
 
     <div class="container">
       <ion-item class="ion-margin-top" lines="none">
-        <ion-input type="email" placeholder="E-mail"></ion-input>
+        <ion-input type="email" placeholder="E-mail" [(ngModel)]="userPassword.email"></ion-input>
       </ion-item>
 
       <ion-item class="ion-margin-top" lines="none">
