--- a/src/app/pages/password/password.page.scss
+++ b/src/app/pages/password/password.page.scss
@@ -7,11 +7,19 @@
 .image {
     width: 55%;
     margin: 30px auto;
+    position: absolute;
+    top: 5px;
+    left: 0;
+    right: 0;
 }
 
 .text {
     width: 80%;
     margin: 0 auto;
+    position: absolute;
+    top: 160px;
+    left: 0;
+    right: 0;
     text-align: center;
 
     ion-title {
@@ -28,6 +36,10 @@
 .container {
     width: 80%;
     margin: 0 auto;
+    position: absolute;
+    top: 260px;
+    left: 0;
+    right: 0;
 
     ion-item {
         --background: rgba(var(--ion-color-medium-rgb), 0.4);
