--- a/src/app/pages/password/password.page.html
+++ b/src/app/pages/password/password.page.html
@@ -8,7 +8,7 @@
       <ion-title>Esqueceu sua senha?</ion-title>
 
       <span>
-        Informe o CNPJ e o E-mail cadastrados para que possamos enviar um link de recuperação
+        Informe o e-mail cadastrado para que possamos enviar um link de recuperação
       </span>
     </div>
 
@@ -17,9 +17,9 @@
         <ion-input type="email" placeholder="E-mail" [(ngModel)]="userPassword.email"></ion-input>
       </ion-item>
 
-      <ion-item class="ion-margin-top" lines="none">
+      <!-- <ion-item class="ion-margin-top" lines="none">
         <ion-input type="text" placeholder="CNPJ"></ion-input>
-      </ion-item>
+      </ion-item> -->
 
       <ion-button class="ion-margin-top" (click)="forgotPassword()" color="light" expand="block">ENVIAR</ion-button>
     </div>
