Melhorias no menu e correções de bug gerais

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ion-app>
+<!-- <ion-app>
   <ion-split-pane>
     <ion-menu type="overlay">
       <ion-header>
@@ -16,6 +16,23 @@
                 {{p.title}}
               </ion-label>
             </ion-item>
+
+            <ion-item *ngIf="p.children?.length > 0" (click)="p.open =! p.open" [class.active-parent]="p.open" detail="false">
+              <ion-icon slot="start" name="arrow-forward" *ngIf="!p.open"></ion-icon>
+              <ion-icon slot="start" name="arrow-down" *ngIf="!p.open"></ion-icon>
+              <label>{{ p.title }}</label>
+            </ion-item>
+
+            <ion-list *ngIf="p.open">
+              <ion-menu-toggle>
+                <ion-item *ngFor="let sub of p.children" [routerDirection]="'root'" [routerLink]="sub.url">
+                  <ion-icon slot="start" [name]="sub.icon"></ion-icon>
+                  <ion-label>
+                    {{sub.title}}
+                  </ion-label>
+                </ion-item>
+              </ion-menu-toggle>
+            </ion-list>
           </ion-menu-toggle>
 
           <ion-item id="sair" (click)="logout()">
@@ -30,4 +47,49 @@
     </ion-menu>
     <ion-router-outlet main></ion-router-outlet>
   </ion-split-pane>
-</ion-app>
+</ion-app> -->
+
+<ion-menu contentId="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-img src="/assets/logoPrincipal.png" id="logo"></ion-img>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content padding>
+    <div *ngFor="let p of appPages">
+
+      <ion-menu-toggle *ngIf="p.url">
+        <ion-item [routerLink]="p.url" routerDirection="root" routerLinkActive="active">
+          <ion-icon [name]="p.icon" slot="start"></ion-icon>
+          <ion-label>
+            {{ p.title }}
+          </ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+      <ion-item button *ngIf="p.children?.length > 0" (click)="p.open = !p.open" [class.active-parent]="p.open"
+        detail="false">
+        <ion-icon slot="start" name="arrow-forward" *ngIf="!p.open"></ion-icon>
+        <ion-icon slot="start" name="arrow-down" *ngIf="p.open"></ion-icon>
+        <label>
+          {{ p.title }}
+        </label>
+      </ion-item>
+
+      <ion-list *ngIf="p.open">
+        <ion-menu-toggle>
+          <ion-item class="sub-item" *ngFor="let sub of p.children" [routerLink]="sub.url" routerDirection="root"
+            routerLinkActive="active">
+            <ion-icon [name]="sub.icon" slot="start"></ion-icon>
+            <ion-label>
+              {{ sub.title }}
+            </ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </div>
+  </ion-content>
+</ion-menu>
+
+<ion-router-outlet id="content" main></ion-router-outlet>
