--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,7 @@
     --ion-text-color: var(--ion-color-primary);
 
     ion-icon {
-        --ion-text-color: var(--ion-color-primary);
+        --ion-text-color-rgb: var(--ion-color-primary);
     }
 }
 
