--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -11,10 +11,12 @@ ion-searchbar {
 
 .welcome-card2 {
   width: 25vh;
+  height: 30vh;
   float: left;
   padding-bottom: 5px;
 
   img {
+    height: 100px;
     margin-bottom: 5px;
   }
 
