--- a/src/app/pages/products/products.page.html
+++ b/src/app/pages/products/products.page.html
@@ -7,6 +7,16 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <!-- Refresh da página -->
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 
+  <!-- botão que redireciona para a página de cadastro de produtos -->
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button color="primary" routerLink="/add-products">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
 </ion-content>
