--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content padding>
+  <ion-content class="ion-padding">
     <div *ngFor="let p of appPages">
 
       <ion-menu-toggle *ngIf="p.url">
@@ -88,7 +88,15 @@
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
+      
     </div>
+
+    <ion-item id="sair" (click)="logout()">
+        <ion-icon slot="start" name="power"></ion-icon>
+        <ion-label>
+          Sair
+        </ion-label>
+      </ion-item>
   </ion-content>
 </ion-menu>
 
