--- a/src/app/pages/add-products/add-products.page.html
+++ b/src/app/pages/add-products/add-products.page.html
@@ -1,10 +1,33 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-button routerLink="../products">
+        <ion-icon name="arrow-round-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Cadastrar Produtos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+
+  <ion-list>
+    <ion-item>
+      <ion-input type="text" [(ngModel)]="product.name" placeholder="Nome"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input type="text" [(ngModel)]="product.description" placeholder="Descrição"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input type="text" [(ngModel)]="product.picture" placeholder="Foto"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input type="text" [(ngModel)]="product.price" placeholder="Preço"></ion-input>
+    </ion-item>
+  </ion-list>
+
+
+
   <ion-button (click)="openGalery()" expanded="block">
     <ion-icon name="camera"></ion-icon>
   </ion-button>
@@ -12,10 +35,14 @@
   <ion-item>
     <ion-label>Progresso de upload: {{ uploadPercent | async }}%</ion-label>
   </ion-item>
-  
-  <ion-item>
-    <ion-label class="ion-text-wrap">URL de download: {{ downloadUrl | async }}</ion-label>
-  </ion-item>
 
   <img [src]="downloadUrl | async" *ngIf="downloadUrl | async">
+  <!-- <ion-item>
+    <ion-label class="ion-text-wrap">URL de download: {{ downloadUrl | async }}</ion-label>
+  </ion-item> -->
+
+
+  <ion-button (click)="saveProduct()" expand="block">
+    Salvar produto
+  </ion-button>
 </ion-content>
