--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,14 +9,14 @@
 
 <ion-content>
   <!-- Produto promocional -->
-  <ion-card class="welcome-card" *ngFor="let product of products" [routerLink]="['/details', product.id]">
-    <img [src]="product.picture" />
+  <ion-card class="welcome-card" routerLink="/detail-banner">
+    <img src="/assets/banner.png" />
   </ion-card>
 
   <!-- Demais produtos -->
   <div class="master">
     <ion-card class="welcome-card2" *ngFor="let product of products" [routerLink]="['/details', product.id]">
-      <img [src]="product.picture" />
+      <img [src]="product.picture">
 
       <div>{{ product.name }}</div>
       <div *ngIf="product.price">{{ product.price | currency: 'BRL' }}</div>
